# Path-Planning-in-ROS-2-for-Industrial-Robotics_Bachelor-s-thesis

./: .gitignore  README.md
mycobot_bringup/: CMakeLists.txt  package.xml
mycobot_bringup/launch/: moveit_rviz_gazebo.launch.py
mycobot_description/: CMakeLists.txt  package.xml
mycobot_description/config/: initial_positions.yaml
mycobot_description/config/ur5/: joint_limits.yaml
mycobot_description/urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur5_robotiq85_gripper.urdf.xacro  ur_macro.xacro
mycobot_description/urdf/inc/: ur_common.xacro  ur_transmissions.xacro
mycobot_gazebo/: CMakeLists.txt  package.xml
mycobot_gazebo/config/: ros_gz_bridge.yaml
mycobot_gazebo/launch/: gazebo.launch.py  run.launch.py
mycobot_gazebo/launch/starter/: gazebo.launch.py  move_group_gazebo.launch.py
mycobot_gazebo/worlds/: empty.world.sdf
mycobot_gripper_description/: CMakeLists.txt  package.xml
mycobot_gripper_description/urdf/: robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro
mycobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mycobot_moveit_config/config/: controllers.yaml  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml  ur_servo.yaml
mycobot_moveit_config/config/ur5/: kinematics.yaml
mycobot_moveit_config/launch/: move_group.launch.py  moveit_core.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
mycobot_moveit_config/rviz/: view_robot.rviz
mycobot_moveit_config/srdf/: ur_gripper.srdf.xacro  ur_gripper_macro.srdf.xacro
mycobot_mtc/: CMakeLists.txt  package.xml
mycobot_mtc/config/rviz/: mtc_robot.rviz
mycobot_mtc/launch/: run.launch.py
mycobot_mtc/launch/starter/: moveit_rviz.launch.py  pick_and_place.launch.py
mycobot_mtc/src/: mtc_node.cpp
mycobot_ros2/: package.xml
plugins/: README.md
plugins/rviz2-panel/include/rviz2-panel/: rviz2_panel.hpp
plugins/rviz2-panel/resource/: push_button.ui
plugins/rviz2-panel/src/: rviz2_panel.cpp
ur5/: README.md
ur5/mycobot_description/: CMakeLists.txt  README.md  package.xml
ur5/mycobot_description/config/: initial_positions.yaml
ur5/mycobot_description/config/ur5/: default_kinematics.yaml  joint_limits.yaml  visual_parameters.yaml
ur5/mycobot_description/meshes/storage/visual/: storage.dae
ur5/mycobot_description/meshes/workspace/collision/: robot_workspace.stl
ur5/mycobot_description/meshes/workspace/visual/: robot_workspace.dae
ur5/mycobot_description/urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur5_robotiq85_gripper.urdf.xacro  ur_macro.xacro
ur5/mycobot_description/urdf/workspace/: storage.urdf.xacro  workspace.urdf.xacro
ur5/mycobot_gazebo/: CMakeLists.txt  package.xml
ur5/mycobot_gazebo/config/: ros_gz_bridge.yaml
ur5/mycobot_gazebo/models/camera/: camera.sdf  model.config
ur5/mycobot_gazebo/models/storage/: model.config  storage.sdf
ur5/mycobot_gazebo/models/storage/collision/: storage.stl
ur5/mycobot_gazebo/models/workpiece/: model.config  workpiece.sdf
ur5/mycobot_gazebo/models/workpiece/collision/: workpiece.stl
ur5/mycobot_gazebo/models/workpiece/visual/: workpiece.dae
ur5/mycobot_gazebo/worlds/: gazebo.world.sdf
ur5/mycobot_gripper_description/: README.md  package.xml
ur5/mycobot_gripper_description/meshes/: campus02_coupler.stl
ur5/mycobot_gripper_description/urdf/: robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro
ur5/mycobot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur5/mycobot_moveit/config/: controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
ur5/mycobot_moveit/config/ur5/: kinematics.yaml  pilz_cartesian_limits.yaml
ur5/mycobot_moveit/srdf/: ur_gripper.srdf.xacro  ur_gripper_macro.srdf.xacro
ur5/mycobot_mtc/: CMakeLists.txt  package.xml
ur5/mycobot_mtc/include/mycobot_mtc/: mtc_task_common.hpp  mtc_task_node.hpp
ur5/mycobot_mtc/launch/: run.launch.py
ur5/mycobot_mtc/rviz/: mtc_rviz.rviz
ur5/mycobot_mtc/src/: mtc_node.cpp  mtc_task_callbacks.cpp  mtc_task_creation.cpp  mtc_task_execute.cpp  mtc_task_main.cpp  mtc_task_scene.cpp
ur5/mycobot_opencv/: package.xml  setup.cfg  setup.py
ur5/mycobot_opencv/mycobot_opencv/: img_pubsub.py
ur5/mycobot_ros2/: package.xml
